Added the base for the power and added an example for when the player is interacting. Also, check that you don't mean if when you write while...

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -70,7 +70,7 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Script/CLNR.CLNRGameModeBase
+GlobalDefaultGameMode=/Game/Audun/CLNRGameModeBase_BP.CLNRGameModeBase_BP_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -109,5 +109,4 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
 
