Added kit string to be used in hud, and changed how kit actor works(must press "E" while on the actor).

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -71,6 +71,8 @@ AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Audun/CLNRGameModeBase_BP.CLNRGameModeBase_BP_C
+EditorStartupMap=/Game/Audun/CafeLevelTest.CafeLevelTest
+GameDefaultMap=/Game/Audun/CafeLevelTest.CafeLevelTest
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -109,5 +111,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-
