Added some meshes, and changes from the testing session.

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -60,14 +60,14 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 bDefaultViewportMouseLock=False
 DefaultViewportMouseLockMode=LockOnCapture
 -ActionMappings=(ActionName="Interact",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Kit1",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Kit2",Key=Two,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Kit3",Key=Three,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="KitInteract",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Kit1",Key=One,bShift=True,bCtrl=True,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Kit2",Key=Two,bShift=True,bCtrl=True,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Kit3",Key=Three,bShift=True,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="KitInteract",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Interact",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Kit1",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Kit2",Key=Two,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Kit3",Key=Three,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Kit1",Key=One,bShift=True,bCtrl=True,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Kit2",Key=Two,bShift=True,bCtrl=True,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Kit3",Key=Three,bShift=True,bCtrl=True,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="KitInteract",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -AxisMappings=(AxisName="Move_X",Key=W,Scale=1.000000)
 -AxisMappings=(AxisName="Move_X",Key=S,Scale=-1.000000)
