Added GameInstance and a variable for score over the full game, must be tested more and implemented fully.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -71,8 +71,9 @@ AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Audun/CLNRGameModeBase_BP.CLNRGameModeBase_BP_C
-EditorStartupMap=/Game/Audun/CafeLevelTest.CafeLevelTest
-GameDefaultMap=/Game/Audun/CafeLevelTest.CafeLevelTest
+EditorStartupMap=/Game/Maps/Level_1_Test.Level_1_Test
+GameDefaultMap=/Game/Maps/Level_1_Test.Level_1_Test
+GameInstanceClass=/Script/CLNR.MyGameInstance
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -111,5 +112,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-
