Animations and new assets in, animations have been added to the player.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -75,6 +75,9 @@ EditorStartupMap=/Game/Maps/Level_1_Test.Level_1_Test
 GameDefaultMap=/Game/Maps/Level_1_Test.Level_1_Test
 GameInstanceClass=/Script/CLNR.MyGameInstance
 
+[/Script/Engine.Engine]
+bAllowMultiThreadedAnimationUpdate=True
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -112,3 +115,4 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
+
