--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -71,8 +71,8 @@ AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Audun/CLNRGameModeBase_BP.CLNRGameModeBase_BP_C
-EditorStartupMap=/Game/Maps/Level_1_Test.Level_1_Test
-GameDefaultMap=/Game/Maps/Level_1_Test.Level_1_Test
+EditorStartupMap=/Game/Maps/MainMenu.MainMenu
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 GameInstanceClass=/Script/CLNR.MyGameInstance
 
 [/Script/Engine.Engine]
@@ -115,4 +115,5 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
+
 
