--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -70,7 +70,7 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Game/Blueprints/CLNRGameModeBase_BP.CLNRGameModeBase_BP_C
+GlobalDefaultGameMode=/Script/CLNR.CLNRGameModeBase
 EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 GameInstanceClass=/Script/CLNR.MyGameInstance
